samples/_failures_safe/1760959622_c6668a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07383ecf.c: In function ‘main’:
./samples/SAFE/__tmp_07383ecf.c:152:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  152 |     const char* operation_names
      |     ^~~~~
./samples/SAFE/__tmp_07383ecf.c:152:5: error: expected declaration or statement at end of input
